# market_data_analytics

./: .gitignore  README.md  logger.py  main.py  prefect.yaml  pyproject.toml  requirements.txt
deployments/: daily-etl-deployment.yaml
evidence_dashboard/pages/: history_dashboard.md  index.md  stock_dashboard.md
evidence_dashboard/sources/stock_data/: companies.sql  connection.yaml
flows/: daily_etl.py
stock_data/: __init__.py  extractor.py  loader.py  utils.py
streamlit_dashboard/: index.py
streamlit_dashboard/pages/: history_dashboard.py  stock_dashboard.py
