[tool.poetry]
name = "market_data_analytics"
version = "0.1.0"
description = "ETL pipeline using yfinance, DuckDB, and Prefect, with dashboards via Evidence, Streamlit, or React"
authors = ["yvesco"]
readme = "README.md"
packages = [
  { include = "stock_data" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2"
yfinance = "^0.2"
duckdb = "^0.10"
pyarrow = "^15.0"
prefect = "^2.0"
streamlit = "^1.34"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
mypy = "^1.10"
ipykernel = "^6.29"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"